[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/City/City-no-sky.png" type="Texture" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]
[ext_resource path="res://src/Bar/HealthBarGroup.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Clock/Clock.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/DeckOfCards/DeckOfCards.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/City/Pedestrians/PedestrianSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/City/Sky.png" type="Texture" id=7]
[ext_resource path="res://src/City/Shader/day_gradienttexture.tres" type="Texture" id=8]
[ext_resource path="res://src/City/Shader/night_gradienttexture.tres" type="Texture" id=9]
[ext_resource path="res://Background.gd" type="Script" id=10]
[ext_resource path="res://assets/Menu/simcovid19 logo.png" type="Texture" id=11]
[ext_resource path="res://MenuBackground.gd" type="Script" id=12]
[ext_resource path="res://assets/Menu/NormalButton.tres" type="StyleBox" id=13]
[ext_resource path="res://assets/Menu/HoverPressedButton.tres" type="StyleBox" id=14]
[ext_resource path="res://assets/Fonts/The Snowday.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/Fonts/monogram.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/Sounds/Morning.ogg" type="AudioStream" id=17]
[ext_resource path="res://assets/Sounds/Morning2.ogg" type="AudioStream" id=18]
[ext_resource path="res://assets/Sounds/switch23.ogg" type="AudioStream" id=19]
[ext_resource path="res://assets/Sounds/close_004.ogg" type="AudioStream" id=20]
[ext_resource path="res://assets/Sounds/Morning3.ogg" type="AudioStream" id=21]
[ext_resource path="res://assets/Sounds/Fail.ogg" type="AudioStream" id=22]
[ext_resource path="res://assets/Sounds/confirmation_001.ogg" type="AudioStream" id=23]
[ext_resource path="res://assets/Sounds/BackGround.ogg" type="AudioStream" id=24]
[ext_resource path="res://assets/GameOver/TV sin pantalla.png" type="Texture" id=25]
[ext_resource path="res://assets/GameOver/Videos/helicopter.webm" type="VideoStream" id=26]
[ext_resource path="res://assets/GameOver/Videos/highschool.webm" type="VideoStream" id=27]
[ext_resource path="res://assets/GameOver/Videos/health.webm" type="VideoStream" id=28]
[ext_resource path="res://assets/GameOver/Videos/social.webm" type="VideoStream" id=29]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float progress : hint_range(0.0,1) = 1;
uniform sampler2D day_gradient;
uniform sampler2D night_gradient;

void fragment() {
	vec3 c = texture(TEXTURE, UV, 0.0).rgb;
    float grayscale = 0.2989 * c.r + 0.5870 * c.g + 0.1140 * c.b;
	vec4 day = texture(day_gradient, vec2(grayscale, 0.0));
	vec4 night = texture(night_gradient, vec2(grayscale, 0.0));
	vec4 sky = mix(day, night, progress);
    COLOR.rgb = sky.rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/progress = 0.0
shader_param/day_gradient = ExtResource( 8 )
shader_param/night_gradient = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=5]
size = 23
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.164706, 0.164706, 0.215686, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0705882, 0.647059, 0.721569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.164706, 0.164706, 0.215686, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0.227451, 0.34902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
size = 27
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=12]
resource_name = "typewriter"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("../Fade/FadeBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("../Fade/FadeBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.011
anchor_bottom = 1.012
margin_right = -0.264038
margin_bottom = -0.200073
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky" type="TextureRect" parent="Background"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 0.00012207
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Street" type="TextureRect" parent="Background"]
anchor_right = 1.001
anchor_bottom = 1.0
margin_left = -8.0
margin_right = -0.0350342
margin_bottom = -1.99988
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 24 )
autoplay = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Clock" parent="." instance=ExtResource( 4 )]
seconds_per_day = 15.0

[node name="DeckOfCards" parent="." instance=ExtResource( 5 )]
position = Vector2( 524, 260 )
scale = Vector2( 1, 1 )

[node name="HealthBarGroup" parent="." instance=ExtResource( 3 )]

[node name="PedestrianSpawner" parent="." instance=ExtResource( 6 )]

[node name="MenuBackground" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -144.0
margin_right = 108.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MenuBackground/ButtonsContainer"]
margin_right = 256.0
margin_bottom = 97.0
size_flags_vertical = 3
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Comenzar"

[node name="Help" type="Button" parent="MenuBackground/ButtonsContainer"]
margin_top = 101.0
margin_right = 256.0
margin_bottom = 198.0
size_flags_vertical = 3
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ayuda"

[node name="TextureRect" type="TextureRect" parent="MenuBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.0
margin_top = -240.0
margin_right = 236.0
margin_bottom = -162.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpContainer" type="Panel" parent="MenuBackground"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -292.0
margin_top = -160.0
margin_right = 252.0
margin_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="MenuBackground/HelpContainer"]
margin_right = 544.0
margin_bottom = 408.0
custom_fonts/normal_font = SubResource( 5 )
text = "
Comenzarás eligiendo 4 cartas, las cuales afectarán principalmente a las barras señaladas. SIEMPRE las cartas afectarán a las barras, pero esto puede ser positiva o negativamente.

Todos los días por la mañana tendrás que elegir una carta nueva.

Con el pasar de las horas, verás como el estado de salud de las barras afectan a las personas que verás en el fondo.

Tendrás 3 oportunidades para mejorar las barras en caso de que bajen mucho. Si agotas las 3 oportunidades, perderás la partida.

Por último, cada 15 días cambiarás de fase. Esto implica que se renovarán tus chances para mejorar las barras y también se reiniciarán los efectos en las barras. Pero cuidado, cada barra comenzará en el estado en el que las dejaste antes.

No la cagues !"

[node name="Back" type="Button" parent="MenuBackground/HelpContainer"]
margin_left = 456.0
margin_top = 352.0
margin_right = 524.0
margin_bottom = 380.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volver"

[node name="InputContainer" type="Panel" parent="MenuBackground"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -152.0
margin_right = 228.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="MenuBackground/InputContainer"]
margin_left = 88.0
margin_top = 88.0
margin_right = 408.0
margin_bottom = 128.0
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )

[node name="InputLabel" type="RichTextLabel" parent="MenuBackground/InputContainer"]
margin_top = 48.0
margin_right = 496.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 10 )
text = "Ingresa tu nombre, así los ciudadanos sabrán a quien insultar"

[node name="ContinueButton" type="Button" parent="MenuBackground/InputContainer"]
margin_left = 208.0
margin_top = 152.0
margin_right = 296.0
margin_bottom = 184.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Continuar"

[node name="sfx" type="Node" parent="."]

[node name="Mg" type="Node" parent="sfx"]

[node name="0" type="AudioStreamPlayer" parent="sfx/Mg"]
stream = ExtResource( 17 )

[node name="1" type="AudioStreamPlayer" parent="sfx/Mg"]
stream = ExtResource( 18 )

[node name="2" type="AudioStreamPlayer" parent="sfx/Mg"]
stream = ExtResource( 21 )

[node name="No" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 19 )

[node name="Si" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 23 )

[node name="Intento" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 20 )

[node name="Fail" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 22 )

[node name="GameOverScreen" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TV" type="Control" parent="GameOverScreen/VBoxContainer"]
margin_right = 40.0

[node name="Economic" type="VideoPlayer" parent="GameOverScreen/VBoxContainer/TV"]
visible = false
margin_left = -144.0
margin_top = -156.0
margin_right = 96.0
margin_bottom = 60.0
stream = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cultural" type="VideoPlayer" parent="GameOverScreen/VBoxContainer/TV"]
visible = false
margin_left = -136.0
margin_top = -148.0
margin_right = 96.0
margin_bottom = 60.0
stream = ExtResource( 27 )

[node name="Social" type="VideoPlayer" parent="GameOverScreen/VBoxContainer/TV"]
visible = false
margin_left = -136.0
margin_top = -148.0
margin_right = 96.0
margin_bottom = 28.0
stream = ExtResource( 29 )

[node name="Health" type="VideoPlayer" parent="GameOverScreen/VBoxContainer/TV"]
visible = false
margin_left = -136.0
margin_top = -148.0
margin_right = 96.0
margin_bottom = 20.0
stream = ExtResource( 28 )

[node name="TV" type="Sprite" parent="GameOverScreen/VBoxContainer/TV"]
position = Vector2( 15.9999, -36 )
scale = Vector2( 0.5, 0.4866 )
texture = ExtResource( 25 )

[node name="Text" type="Control" parent="GameOverScreen/VBoxContainer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 4.0

[node name="GameOverText" type="Label" parent="GameOverScreen/VBoxContainer/Text"]
visible = false
margin_left = -184.0
margin_top = 136.0
margin_right = 216.0
margin_bottom = 168.0
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextAnimation" type="AnimationPlayer" parent="GameOverScreen/VBoxContainer/Text"]
anims/typewriter = SubResource( 12 )

[node name="Fade" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeBackground" type="ColorRect" parent="Fade"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -6.10352e-05
mouse_filter = 1
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeAnimation" type="AnimationPlayer" parent="Fade"]
anims/fade_in = SubResource( 13 )
anims/fade_out = SubResource( 14 )

[connection signal="pressed" from="MenuBackground/ButtonsContainer/Start" to="MenuBackground" method="_on_Start_pressed"]
[connection signal="pressed" from="MenuBackground/ButtonsContainer/Help" to="MenuBackground" method="_on_Help_pressed"]
[connection signal="pressed" from="MenuBackground/HelpContainer/Back" to="MenuBackground" method="_on_Back_pressed"]
[connection signal="text_changed" from="MenuBackground/InputContainer/Input" to="MenuBackground" method="_on_Input_text_changed"]
[connection signal="pressed" from="MenuBackground/InputContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MenuBackground/InputContainer/ContinueButton" to="MenuBackground" method="_on_ContinueButton_pressed"]
[connection signal="animation_finished" from="Fade/FadeAnimation" to="." method="_on_FadeAnimation_animation_finished"]
